bynkc/tests/fixtures/positive/144_mock_refined/src/commerce/money.bynk
commons commerce.money

type Quantity = Int where InRange(1, 100)
